--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 # production requirements
-pandas==1.4
-numpy==1.19.5
-scikit-learn==1.2.1
-transformers==4.26.0
-tensorflow>=2.6.5
+#pandas==1.4
+#numpy==1.19.5
+tensorflow==2.6.5
 keras==2.6.0
+transformers==4.26.0
+scikit-learn==1.2.1
 nltk==3.8.1
 
 # packaging
